<resources>

    <string name="app_name">Image of the Date</string>

    <!--   Start Activity Strings      -->
    <string name="startTitleTextString">NASA Image of the Date</string>
    <string name="startBtnTextString">Click to Start!</string>

    <!--   Main Menu Activity Strings      -->
    <string name="toolbarTitleMainMenuActivity">Main Menu</string>
    <string name="mainMenuTitle">Main Menu</string>
    <string name="mainMenuTodaysImageBtnText">View Today\'s Image</string>
    <string name="mainMenuPickDateBtnText">Select Date to View Image</string>
    <string name="mainMenuSavedImagesBtnText">View Saved Images</string>

    <!--   Main Menu Activity Help Menu    -->
    <string name="mainMenuHelpMenuDialogTitle">Main Menu</string>
    <string name="mainMenuHelpMenuParaOne">Today\'s Image Button: Brings user to Image View Activity and displays the image for current date.</string>
    <string name="mainMenuHelpMenuParaTwo">Pick Date Button: Brings the user to Pick Date Activity.</string>
    <string name="mainMenuHelpMenuParaThree">Saved Image Button: Brings user to saved Images Activity.</string>


    <!--   Image View Activity Strings  -->
    <string name="toolbarTitleImageViewActivity">Image View</string>
    <string name="imageTitleText">Title:</string>
    <string name="DateTitleString">Date:</string>
    <string name="urlTitleString">URL:</string>
    <string name="expTitleString">Explanation: </string>
    <string name="hdUrlBtnString">View HD Image </string>
    <string name="snackbarMessage">Has Been Saved.</string>
    <string name="snackbarCallToAction">View Saved Images!</string>
    <string name="saveImageBtn">Save Image</string>

    <!--   Image View Activity Help Menu  -->
    <string name="imageViewHelpMenuDialogTitle">Image Viewer Activity</string>
    <string name="imageViewHelpMenuParaOne">Image Explanation: Text can be scrolled if it does not fit the screen.</string>
    <string name="imageViewHelpMenuParaTwo">View HD Image Button: When this button is clicked it will open the default browser and displayed the HD Image within.</string>
    <string name="imageViewHelpMenuParaThree">Save Image Button: When this button is clicked the current image and its data will be saved within the application memory. </string>

    <!--   Pick Date Activity Strings  -->
    <string name="toolbarTitleDatePickerActivity">Pick Image Date</string>
    <string name="date_pick_title">Select Date to View Image</string>
    <string name="pickDateEditTextButton">Click to view</string>
    <string name="datePickerButton">Enter Date of Image to view</string>
    <string name="editTextTitle">View Selected Date</string>

    <!--   Pick Date Activity View Activity Help Menu  -->
    <string name="datePickerHelpMenuDialogTitle">Date Picker Activity</string>
    <string name="pickedDateHelpMenuParaOne">View Selected Date Button: When clicked this will load the View Image Activity and load the image for the selected date.</string>
    <string name="pickedDateHelpMenuParaTwo">Click To View Button: When this button is clicked it will load the Image Activity with the date entered manually by the user. (Date Format: yyyy-mm-dd) </string>
    <string name="pickedDateHelpMenuParaThree"></string>

    <!--  Saved Images Activity Strings  -->
    <string name="toolbarTitleSavedImagesActivity">Saved Images</string>

    <!--  Saved Image Activity Help Menu  -->
    <string name="savedImageHelpMenuDialogTitle">Saved Images Activity</string>
    <string name="savedImageHelpMenuParaOne" >Short Click on an Image: a window will open displaying detail information about the saved image.</string>
    <string name="savedImageHelpMenuParaTwo">Long Click on an Image: a window will open asking  if you would like to delete this entry from the application memory.</string>

    <!-- ToolBar Strings -->
    <string name="menuItemOneTitle">Home</string>
    <string name="menuItemTwoTitle">Today\'s Image</string>
    <string name="menuItemThreeTitle">Pick Date</string>
    <string name="menuItemFourTitle">Saved Images</string>
    <string name="overflowMenuTitle">Information | Help</string>
    <string name="savedImageHelpMenuParaThree"></string>

    <!-- ToolBar Overflow Menu Strings -->
    <string name="helpMenuTitle">Info</string>
    <string name="helpMenuCloseBtnText">Close</string>

    <!-- drawer frame -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sideMenuHeaderTitleText">NASA Image of the Date</string>
    <string name="sideMenuItemOne">Main Menu</string>
    <string name="sideMenuItemTwo">Today\'s Image</string>
    <string name="sideMenuItemThree">Pick Image Date</string>
    <string name="sideMenuItemFour">Saved Images List</string>

    <!-- Delete imageData window -->
    <string name="deleteImageHeader">Delete Image Data?</string>



</resources>