<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <item android:id="@+id/sideMenuMainMenuXML"

        android:orderInCategory="10"
        android:title="@string/sideMenuItemOne"
        android:icon="@drawable/main_menu_icon"
        app:showAsAction="always"/>


    <item android:id="@+id/sideMenuTodayImageXML"

        android:orderInCategory="20"
        android:title="@string/sideMenuItemTwo"
        android:icon="@drawable/today_image_icon"
        app:showAsAction="always"/>

    <item android:id="@+id/sideMenuPickDateIconXML"

        android:orderInCategory="30"
        android:title="@string/sideMenuItemThree"
        android:icon="@drawable/date_picker_icon"
        app:showAsAction="always"/>

    <item android:id="@+id/sideMenuSavedImagesIconXML"

        android:orderInCategory="40"
        android:title="@string/sideMenuItemFour"
        android:icon="@drawable/saved_image_icon"
        app:showAsAction="always"/>


</menu>