<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenu"
    android:background="@color/black">


    <androidx.appcompat.widget.Toolbar  android:id="@+id/mainMenuToolbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white"
        android:background="@color/lightBlack"
        app:titleTextAppearance="@style/Toolbar.TitleText"/>


    <androidx.drawerlayout.widget.DrawerLayout  android:id="@+id/sideMenuDrawerLayoutXML"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView android:id="@+id/sideNavMenu"

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/lightBlack"
        app:headerLayout="@layout/side_menu_header_layout"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation_drawer_side_menu_layout" />

    <RelativeLayout android:id="@+id/mainMenuContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_menu_background" >


        <TextView android:id="@+id/mainMenuTitleXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainMenuTitle"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />

      <Button android:id="@+id/viewTodayImageMainMenuBtnXML"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_above="@id/pickDateMainMenuBtnXML"
          android:textColor="@color/white"
          android:text="@string/mainMenuTodaysImageBtnText"
          />


        <Button android:id="@+id/pickDateMainMenuBtnXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:text="@string/mainMenuPickDateBtnText"

            />


        <Button android:id="@+id/savedImagesMainMenuBtnXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pickDateMainMenuBtnXML"
            android:textColor="@color/white"
            android:text="@string/mainMenuSavedImagesBtnText"

            />







    </RelativeLayout>



    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>